--- a/index.html
+++ b/index.html
@@ -13,14 +13,17 @@
     <div id="calculator">
       <div id="result">
         <div id="history">
-          <div id="history-value"></div></div>
-      </div>
+          <p id="history-value"></p>
+          </div>
+      
       <div id="output">
-        <div id="output-value"></div>
+        <p id="output-value">81</p>
       </div>
+    </div>
+
       <div id="keyboard">
-        <button id="clear">C</button>
-        <button id="backspace">CE</button>
+        <button class="operator" id="clear">C</button>
+        <button class="operator" id="backspace">CE</button>
           <button class="operator" id="%" >%</button>
           <button class="operator" id="/">&#247;</button> 
         
